--- a/src/main/resources/templates/jeasUser.html
+++ b/src/main/resources/templates/jeasUser.html
@@ -10,30 +10,30 @@
     <h1>User Details</h1>
     <div class="card">
         <div class="card-body">
-            <p class="card-text">Name: <span th:text="${jeasUser.name}"></span></p>
-            <p class="card-text">Email: <span th:text="${jeasUser.email}"></span></p>
-            <p class="card-text">Birthday: <span th:text="${jeasUser.birthday}"></span></p>
-            <p class="card-text">Phone Number: <span th:text="${jeasUser.phone_number}"></span></p>
-            <p class="card-text">Status: <span th:text="${jeasUser.status}"></span></p>
+            <p class="card-text">Name: <span th:text="${user.name}"></span></p>
+            <p class="card-text">Email: <span th:text="${user.email}"></span></p>
+            <p class="card-text">Birthday: <span th:text="${user.birthday}"></span></p>
+            <p class="card-text">Phone Number: <span th:text="${user.phone_number}"></span></p>
+            <p class="card-text">Status: <span th:text="${user.status}"></span></p>
 
-            <form th:action="'/dashboard/' + ${type.substring(0, type.length() - 1)} + '/' + ${jeasUser.uid} + '?status=activated'" method="post">
-                <button type="submit" class="btn btn-success" th:if="${jeasUser.status.toLowerCase() eq 'pending'}">Accept</button>
+            <form th:action="'/dashboard/' + ${type.substring(0, type.length() - 1)} + '/' + ${user.uid} + '?status=activated'" method="post">
+                <button type="submit" class="btn btn-success" th:if="${user.status.toLowerCase() eq 'pending'}">Accept</button>
             </form>
 
-            <form th:action="'/dashboard/' + ${type.substring(0, type.length() - 1)} + '/' + ${jeasUser.uid} + '?status=declined'" method="post">
-                <button type="submit" class="btn btn-danger" th:if="${jeasUser.status.toLowerCase() eq 'pending'}">Decline</button>
+            <form th:action="'/dashboard/' + ${type.substring(0, type.length() - 1)} + '/' + ${user.uid} + '?status=declined'" method="post">
+                <button type="submit" class="btn btn-danger" th:if="${user.status.toLowerCase() eq 'pending'}">Decline</button>
             </form>
 
-            <form th:action="'/dashboard/' + ${type.substring(0, type.length() - 1)} + '/' + ${jeasUser.uid} + '?status=deactivated'" method="post">
-                <button type="submit" class="btn btn-warning" th:if="${jeasUser.status.toLowerCase() eq 'activated'}">Deactivate</button>
+            <form th:action="'/dashboard/' + ${type.substring(0, type.length() - 1)} + '/' + ${user.uid} + '?status=deactivated'" method="post">
+                <button type="submit" class="btn btn-warning" th:if="${user.status.toLowerCase() eq 'activated'}">Deactivate</button>
             </form>
 
-            <form th:action="'/dashboard/' + ${type.substring(0, type.length() - 1)} + '/' + ${jeasUser.uid} + '?status=activated'" method="post">
-                <button type="submit" class="btn btn-primary" th:if="${jeasUser.status.toLowerCase() eq 'deactivated'}">Activate</button>
+            <form th:action="'/dashboard/' + ${type.substring(0, type.length() - 1)} + '/' + ${user.uid} + '?status=activated'" method="post">
+                <button type="submit" class="btn btn-primary" th:if="${user.status.toLowerCase() eq 'deactivated'}">Activate</button>
             </form>
 
-            <form th:action="'/dashboard/' + ${type.substring(0, type.length() - 1)} + '/' + ${jeasUser.uid} + '?status=activated'" method="post">
-                <button type="submit" class="btn btn-primary" th:if="${jeasUser.status.toLowerCase() eq 'declined'}">Activate</button>
+            <form th:action="'/dashboard/' + ${type.substring(0, type.length() - 1)} + '/' + ${user.uid} + '?status=activated'" method="post">
+                <button type="submit" class="btn btn-primary" th:if="${user.status.toLowerCase() eq 'declined'}">Activate</button>
             </form>
             <h3>ID Image</h3>
             <img th:src="${id_image}" width="750" height="750"  alt="ID Image"/>
